--- a/index.html
+++ b/index.html
@@ -8,22 +8,25 @@
 
 <style>
 
-  .header {
-    text-align: center;
+  body {
+    margin: 0;
   }
 
-  .sliderInfo {
-    margin-top: -20px;
+  .header {
+    text-align: center;
+    margin-bottom: 0;
+    padding-bottom: 2vh;
   }
 
   p {
-    margin-bottom: -2%;
     font-size: 25px;
   }
 
   #canvas {
     margin-left: auto;
     margin-right: auto;
+    margin-top: 0%;
+    margin-bottom: 0%;
     text-align: left;
     background-color: rgb(75, 75, 75);
   }
@@ -32,7 +35,6 @@
   position: relative;
   top: -2%;
   text-align: center;
-  margin-bottom: -3%;
 }
 
   button {
